--- a/index.html
+++ b/index.html
@@ -58,16 +58,20 @@
                 </div>
             </div>
         </div>
-        <div class="right">
-            <div class="image-wrapper">
-                <div class="image"></div>
+        <div class="spacer"></div>
+        <div class="wrapper">
+            <div class="right">
+                <div class="image-wrapper">
+                    <div class="image"></div>
+                </div>
+                <div id="newsletter">Email newsletter</div>
+                <div id="tips">Useful front-end & UX tips, delivered once a week.</div>
+                <div id="inbox">With tools to help you get your work done better. Subscribe and get Vitaly’s Smart
+                    Interface
+                    Design
+                    Checklists PDF — in your inbox. 🎁</div>
+                <div class="input">YOUR EMAIL MEOW</div>
             </div>
-            <div id="newsletter">Email newsletter</div>
-            <div id="tips">Useful front-end & UX tips, delivered once a week.</div>
-            <div id="inbox">With tools to help you get your work done better. Subscribe and get Vitaly’s Smart Interface
-                Design
-                Checklists PDF — in your inbox. 🎁</div>
-            <div class="input">YOUR EMAIL MEOW</div>
         </div>
     </div>
 </body>
