--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
                     corporis, officia obcaecati quia.
                 </div>
             </div>
+            <div class="secondary-posts">
+                <div class="top">
+                    <div class="picture"></div>
+                    <div class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, nemo.</div>
+                </div>
+
+                <div class="top">
+                    <div class="picture"></div>
+                    <div class="title">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, nemo.</div>
+                </div>
+            </div>
         </div>
         <div class="spacer"></div>
         <div class="wrapper">
